# stacktwin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: monday-content-prefetch.yml
backend/profiles/: dipusreedhar871@gmail.com_profile.json  dodamanisoumya15@gmail.com_profile.json  profile.json
backend/stacktwin/: __init__.py
docs/: nebius-pipeline.md
pipeline/: ingest.py
pipeline/sources/: arxiv.py  base.py  devto.py  hackernews.py
profile/: builder.py  extractor.py  schema.py
src/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
src/__tests__/: AppNav.test.tsx  OnboardingFlow.test.tsx  ProfileSettingsPage.test.tsx  classroom-user-data.test.ts  progress.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppNav.tsx  ArchiveView.tsx  LessonPlayer.tsx  OnboardingFlow.tsx  ProfileInfluenceBand.tsx  ProfileReviewForm.tsx  QuickStartProfileForm.tsx  ThemeToggle.tsx  WeeklyTrackHome.tsx
src/lib/: classroom-user-data.ts  classroom-user.ts  classroom.ts  config.ts  onboarding.ts  profile-types.ts  progress.ts  weekly-content.ts  weekly-track.ts
tests/: __init__.py  conftest.py  test_auth_gate.py  test_content_prefetch.py  test_hackernews_status.py  test_idempotency.py  test_learning.py  test_llm_config.py  test_nebius_job.py  test_pipeline_job.py  test_pipeline_runs.py  test_qwen_pipeline.py  test_source_status.py  test_sources.py  test_sources_unit.py  test_storage.py  test_structured_output.py  test_track_api.py
(+40 files in other folders)
