[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stacktwin"
version = "0.1.0"
description = "Serverless AI pipeline that turns weekly tech noise into personalized developer learning modules."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "pypdf>=4.3.0",
    "python-dotenv>=1.0.1",
    "feedparser>=6.0.11",
    "requests>=2.32.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
